<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="message_should_be_displayed_here" translatable="false">Message should be displayed here</string>
    <string name="app_name">Carbon</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_text_3">Groups</string>
    <string name="add_chat">Add Chat</string>
    <string name="save_phone_contact">Save Contact</string>
    <string name="name">Name</string>
    <string name="open_add">Add</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="generateOTP">Generate OTP</string>
    <string name="OTP">OTP</string>
    <string name="verifyOTP">Verify OTP</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="goToHome">Home</string>
    <string name="changeLanguage">Language</string>
    <string name="mode">Dark Mode</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="app_lock">App Lock</string>
    <string name="sign_out">sign out</string>
    <string name="cancel">Cancel</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="settings">Settings</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verification_code">Verification code</string>
    <string name="send_message">Send Message</string>
    <string name="unlock">Unlock</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="saveChanges">Save Changes</string>
</resources>