<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApplicationTheme">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/md_theme_light_primaryInverse"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:inputType="phone"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:background="@drawable/round_back_white"/>
        <Button
            android:id="@+id/buttonGenerateOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generateOTP"
            android:layout_margin="20dp"
            android:background="@drawable/round_back_secondary" />

        <EditText
            android:id="@+id/editTextOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/OTP"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:background="@drawable/round_back_white"/>

        <Button
            android:id="@+id/buttonVerifyOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verifyOTP"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_back_secondary"
            android:enabled="false"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>