<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_1sdp"
    android:background="@color/statusbar"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:onClick="goBack"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Create new contact"
            android:textColor="#ffff"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/round_back_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <EditText
            android:id="@+id/add_phone_contact_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:autofillHints="name"
            android:background="@drawable/round_background_button"
            android:hint="@string/name"
            android:inputType="textAutoComplete"
            android:lines="1"
            android:padding="@dimen/_6sdp"
            android:paddingStart="@dimen/_16sdp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/add_phone_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:autofillHints="phone"
            android:background="@drawable/round_background_button"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="@dimen/_6sdp"
            android:paddingStart="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/round_background_button"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/add_phone_contact_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_46sdp"
                android:layout_marginEnd="@dimen/_46sdp"
                android:layout_weight="1.3"
                android:autofillHints="phone"
                android:padding="@dimen/_6sdp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <Button
            android:id="@+id/add_phone_contact_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/save_phone_contact" />


    </LinearLayout>

</LinearLayout>