<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_theme_light_secondaryContainer"
    android:layout_gravity="center"
    android:gravity="center">


    <com.andrognito.patternlockview.PatternLockView
        android:id="@+id/patternLockView"
        android:layout_width="371dp"
        android:layout_height="407dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="238dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignEnd="@+id/patternLockView"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="-132dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignEnd="@+id/patternLockView"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="-132dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignEnd="@+id/patternLockView"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/_221sdp"
        android:layout_marginBottom="-131dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="-1dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="@dimen/_228sdp"
        android:layout_marginBottom="-136dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignTop="@+id/patternLockView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="176dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignTop="@+id/patternLockView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/bg_view_blue_oval" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignTop="@+id/patternLockView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/_228sdp"
        android:background="@drawable/bg_view_blue_oval" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="210dp"
        android:layout_height="32dp"
        android:layout_below="@+id/patternLockView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/custtom_button"
        android:fontFamily="serif"
        android:maxHeight="@dimen/_20sdp"
        android:minWidth="@dimen/_100sdp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="2"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/md_theme_dark_onSecondary"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:ignore="MissingConstraints" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Use_finger_print"
        android:layout_width="161dp"
        android:layout_height="124dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="514dp"
        android:text="@string/use_fingerprint"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fingerprint_animation" />

    <TextView
        android:layout_width="139dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/patternLockView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="359dp"
        android:text="@string/use_fingerprint"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:textSize="@dimen/_12sdp" />

    <com.sarnava.textwriter.TextWriter
        android:id="@+id/textwriter"
        android:layout_width="241dp"
        android:layout_height="65dp"
        android:layout_alignBottom="@+id/patternLockView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="534dp" />


</RelativeLayout>